test/good/ex11.cb
def foo() -> fn(int) -> int {
    return loop {
        break \(x: int) -> x
    }
}

def main() {
    printInt(foo()(123));
}
